# MEDS-DEV

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: add-a-dataset.md  add-a-model.md  add-a-task.md
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
demo/: README.MD  aces.ipynb  extract_meds_data.ipynb  extract_task_mimic.py  extract_task_mimic_demo.py  meds_cehrbert.ipynb  meds_cehrbert.py  meds_tab.ipynb  meds_tab.py  meds_torch.ipynb  mimic_preprocess.py  preprocess_eicu.py  preprocess_mimic_demo.py  workflow.py
demo/configs/: event_configs.yaml  extract_MIMIC.yaml  extract_eICU.yaml  table_preprocessors.yaml
src/MEDS-DEV/: __init__.py
src/MEDS-DEV/tasks/: README.md
src/MEDS-DEV/tasks/criteria/: README.md
src/MEDS_DEV/: __init__.py  utils.py
src/MEDS_DEV/configs/: _ACES_MD.yaml  _build_dataset.yaml  _evaluate_predictions.yaml  _extract_task.yaml  _run_model.yaml  predictions.yaml
src/MEDS_DEV/datasets/: README.md  __init__.py  __main__.py
src/MEDS_DEV/datasets/AUMCdb/: README.md  predicates.yaml
src/MEDS_DEV/datasets/MIMIC-IV/: README.md  commands.yaml  dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/datasets/OMOP/: README.md  predicates.yaml
src/MEDS_DEV/datasets/UCLA/: README.md  anemia.yaml  predicates.yaml
src/MEDS_DEV/datasets/template/: README.md  predicates.yaml
src/MEDS_DEV/demo/: meds_tab.ipynb  meds_tab.py
src/MEDS_DEV/evaluation/: README.md  __init__.py  __main__.py
src/MEDS_DEV/helpers/: extract_task.sh  generate_predictions.sh  generate_random_predictions.py
src/MEDS_DEV/models/: __init__.py  __main__.py
src/MEDS_DEV/models/cehrbert/: README.md  _config.yaml  cehrbert_finetune_template.yaml  cehrbert_pretrain_template.yaml  finetune_cehrbert.py  generate_cehrbert_predictions.py  model.yaml  pretrain_cehrbert.py  refs.bib  requirements.txt
src/MEDS_DEV/models/genhpf/: README.md  genhpf_predict.yaml  genhpf_train.yaml  model.yaml  refs.bib  requirements.txt
src/MEDS_DEV/models/motor/: README.md  (+2 more)
src/MEDS_DEV/tasks/: README.md  __init__.py  __main__.py
src/MEDS_DEV/templates/: README.md  dataset.md  model.md  results.md
tasks/: README.md
tasks/MIMIC-IV/: README.md  predicates.yaml
tasks/MIMIC-IV/diagnosis/: complications_of_pregnancy_childbirth_and_the_puerperium.yaml  congenital_anomalies.yaml  diseases_of_the_blood_and_blood_forming_organs.yaml  diseases_of_the_circulatory_system.yaml  diseases_of_the_digestive_system.yaml  diseases_of_the_genitourinarey_system.yaml  diseases_of_the_musculoskeletal_system_and_connective_tissue.yaml  diseases_of_the_nervous_system_and_sense_organs.yaml  diseases_of_the_respiratory_system.yaml  diseases_of_the_skin_and_subcutaneous_tissue.yaml  endocrine_nutritional_and_metabolic_diseases_and_immunity_disorders.yaml  infectious_and_parasitic_diseases.yaml  injury_and_poisoning.yaml  mental_illness.yaml  neoplasms.yaml  symptoms_signs_and_ill-defined_conditions_and_factors_influencing_health_status.yaml
tasks/MIMIC-IV/readmission/: 30d.yaml
tasks/criteria/: README.md
tasks/criteria/abnormal_lab/: README.md  abnormal-lab.yaml
tasks/criteria/chronic_disease/: README.md
tasks/criteria/discharge/: README.md
tasks/criteria/disease_onset/: README.md
tasks/criteria/disease_progression/: README.md
tasks/criteria/in_hospital_mortality/: first_24h.yaml  first_48h.yaml
tasks/criteria/in_icu_mortality/: first_24h.yaml  first_48h.yaml
tasks/criteria/intervention_onset/: README copy.md  README.md
tasks/criteria/intervention_weaning/: README.md
tasks/criteria/length_of_stay/: README.md
tasks/criteria/mortality/: README.md
tasks/criteria/readmission/: 30d.yaml  README.md
tasks/eICU/: README.md  predicates.yaml
templates/: model.md
tests/: conftest.py  test_0_datasets.py  test_1_tasks.py  test_1_unsupervised_models.py  test_2_models.py  test_2_supervised_models.py  test_3_evaluation.py  test_datasets.py  test_evaluation.py  test_models.py  test_tasks.py  utils.py
(+117 files in other folders)
