[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MEDS_DEV"
dynamic = ["version"]
authors = [
    {name="Matthew B. A. McDermott", email="matthew_mcdermott@hms.harvard.edu"},
    {name="Ethan Steinberg", email="ethanid@stanford.edu"},
    {name="Shalmali Joshi", email="shalmali.joshi@columbia.edu"},
    {name="Teya S. Bergamaschi", email="teya@mit.edu"},
    {name="Nassim Oufattole"},
    {name="Aleksia Kolo", email="aleksiak@mit.edu"},
    {name="Young Sang Choi", email="young.sang.choi@columbia.edu"},
    {name="Chao Pang", email="cp3016@cumc.columbia.edu"},
    {name="Kamil\u0117 Stankevi\u010di\u016bt\u0117", email="kamile.stankeviciute@cst.cam.ac.uk"},
    {name="Vincent Jeanselme", email="vincent.jeanselme@mrc-bsu.cam.ac.uk"},
    {name="Justin Xu", email="justin.xu@ndm.ox.ac.uk"}
]


description = "Task configuration and helper files for the MEDS-DEV Benchmark"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["meds==0.3.3", "es-aces==0.6.1", "hydra-core", "meds-evaluation==0.0.2"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov", "rootutils"]
docs = [
  "mkdocs==1.6.0", "mkdocs-material==9.5.31", "mkdocstrings[python,shell]==0.25.2", "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.1", "mkdocs-section-index==0.3.9", "mkdocs-git-authors-plugin==0.9.0",
  "mkdocs-git-revision-date-localized-plugin==1.2.6"
]

[project.scripts]
meds-dev-dataset = "MEDS_DEV.datasets.__main__:main"
meds-dev-task = "MEDS_DEV.tasks.__main__:main"
meds-dev-model = "MEDS_DEV.models.__main__:main"
meds-dev-evaluation = "MEDS_DEV.evaluation.__main__:main"

[project.urls]
Homepage = "https://github.com/mmcdermott/MEDS-DEV"
Issues = "https://github.com/mmcdermott/MEDS-DEV/issues"
